--- a/background.html
+++ b/background.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        <script src="js/base64.js"></script>
         <script src="js/browser_api.js"></script>
         <script src="js/minus.js"></script>
         <script src="js/background.js"></script>
