--- a/background.html
+++ b/background.html
@@ -1,8 +1,11 @@
 <html>
     <body>
-        <script src="js/base64.js"></script>
+        <canvas id="canvas_icon" width="19" height="19"></canvas>
+        <img id='minus_image' src='images/logo.png' width="19" height="19"/>
+
         <script src="js/browser_api.js"></script>
         <script src="js/minus.js"></script>
+        <script src="js/canvas_animation.js"></script>
         <script src="js/background.js"></script>
     </body>
 </html>
