--- a/popup.html
+++ b/popup.html
@@ -47,7 +47,9 @@
         </div>
         <div id="footer">
             <img src="images/logo_big.png" height="40px"/>
+            <a id="user" target="_blank"></a>
             <a href="http://min.us/pages/galleries" target="_blank" id="galleries_header" class="minus_link"></a>
+            <a id="signout" target="_blank" href="http://min.us/api/login/signout">Sign Out</a>
         </div>    
 
         <div id="loader" style="display: none">
