--- a/background.html
+++ b/background.html
@@ -6,6 +6,7 @@
         <script src="js/browser_api.js"></script>
         <script src="js/minus.js"></script>
         <script src="js/canvas_animation.js"></script>
+        <script src="js/store.js"></script>
         <script src="js/background.js"></script>
     </body>
 </html>
