--- a/popup.html
+++ b/popup.html
@@ -60,6 +60,7 @@
         <script src="js/jquery.tmpl.min.js"></script>
         <script src="js/jquery.mousewheel.js"></script>
         <script src="js/jquery.jscrollpane.min.js"></script>
+        <script src="js/store.js"></script>
 
         <script src="js/minus.js"></script>
         <script src="js/browser_api.js"></script>
