--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
     </head>
     <body>
         <div id="header">
-            <a href="#" id="take_screenshot" class='button'>Take Screenshoot</a><span style="padding: 10px;">or</span>
+            <a href="#" id="take_screenshot" class='button'>Take Screenshot</a><span style="padding: 10px;">or</span>
             <a href="http://min.us" id="upload_new" class='button' target="_blank">Upload file</a>
         </div>
         
@@ -52,9 +52,7 @@
             <a id="signout" target="_blank" href="http://min.us/api/login/signout">Sign Out</a>
         </div>    
 
-        <div id="loader" style="display: none">
-            <div>Taking Screenshoot...</div>
-        </div>
+        <div id="loader" style="display: none"><div></div></div>
 
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery.tmpl.min.js"></script>
