--- a/background.html
+++ b/background.html
@@ -1,12 +1,13 @@
 <html>
     <body>
-        <canvas id="canvas_icon" width="19" height="19"></canvas>
-        <img id='minus_image' src='images/logo.png' width="19" height="19"/>
+        <img id="img" src="images/logo_anim_sprite.png" height="19" />
+        <canvas id="canvas" width="19" height="19"></canvas>
 
-        <script src="js/browser_api.js"></script>
-        <script src="js/minus.js"></script>
-        <script src="js/canvas_animation.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/browser_api.js?1"></script>
+        <script src="js/minus.js?1"></script>
+        <script src="js/canvas_animation.js?3"></script>
         <script src="js/store.js"></script>
-        <script src="js/background.js"></script>
+        <script src="js/background.js?2"></script>
     </body>
 </html>
