--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/reset-min.css">
         <link rel="stylesheet" href="css/jquery.jscrollpane.css" />
-        <link rel="stylesheet" href="css/popup.css" />
+        <link rel="stylesheet" href="css/popup.css?1" />
 
         <script id="galleries_template" type="text/x-jquery-tmpl"> 
             {{each galleries}}
@@ -11,7 +11,7 @@
                 <table cellspacing="0" cellpadding="0" width="100%">
                     <tr>                    
                         <td width="80px" class="preview" rowspan="3" valign="top" align="center">
-                            <a target='_blank' href='http://minus.com/m${$value.reader_id}'><img data-image='http://i.minus.com/k${$value.thumbnail_id}' src="images/loading.gif" style="max-width: 80px; max-height: 60px;" /></a>
+                            <a target='_blank' href='http://minus.com/m${$value.reader_id}'><img data-image='${$value.thumbnail_id}' src="images/loading.gif" style="max-width: 80px; max-height: 60px;" /></a>
                         </td>
                         <td class="header">
                             <a class='name' target='_blank' href='http://minus.com/m${$value.reader_id}'>${$value.name||'Untitled'}</a>
@@ -67,8 +67,8 @@
             <a href="#" id="take_screenshot" class='button'><img src="images/btn_camera_normal.png" style="vertical-align: bottom; opacity: 0.8; margin-right: 5px;"/> Take Screenshot</a>
 
             <a class="more">
-                <span>▾</span>
-                <div>
+                <span><img src="images/gear.png" width="20px" height="20px" /></span>
+                <div style="display: none">
                     <ul>
                         <li data-screenshot-type="visible">Visible Part of Page <span>Ctrl+Alt+V</span></li>
                         <li data-screenshot-type="region">Selected Area <span>Ctrl+Alt+R</span></li>
