Fixed bug with upload button

--- a/edit_image.html
+++ b/edit_image.html
@@ -230,7 +230,7 @@
                     .attr('href', "http://www.aviary.com/html5")
                     .attr('target', "_blank");
 
-                $('#upload').html('Saved and Upload');
+                $('#upload').removeClass('loading').html('Saved and Upload');                
             }
              
             function launchEditor(imageid) { 
