--- a/popup.html
+++ b/popup.html
@@ -63,6 +63,25 @@
         </script>
     </head>
     <body>
+        <div id="signin" style="display: none">            
+            <img src="images/logo_large.png" width="300px"/> 
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <div class="links" style="position: relative">
+                <a href="http://minus.com" target="_blank" style="color: #6A6A6A; font-size: 12px; vertical-align: middle;">
+                    <img src="images/signup.png"/>
+                    <br/>
+                    Get a free account, it takes 5 seconds
+                </a>
+                <div class="signin">
+                    <span>or</span>
+                    <a href="http://minus.com" target="_blank" >Sign In</a>
+                </div>
+            </div>                
+        </div>
+
         <div id="header">
             <a href="#" id="take_screenshot" class='button'><img src="images/btn_camera_normal.png" style="vertical-align: bottom; opacity: 0.8; margin-right: 5px;"/> Take Screenshot</a>
 
@@ -84,10 +103,10 @@
         </div>
 
         <div id="timeline">
-            <span>Timeline:</span>
+            <span>Dashboard:</span>
 
+            <a data-timeline='mine'>My Files</a>
             <a data-timeline='feed'>Feed</a>
-            <a data-timeline='mine'>Mine</a>
             <a data-timeline='history'>History</a>
         </div>
 
