--- a/data/popup.html
+++ b/data/popup.html
@@ -59,8 +59,7 @@
                             {{/if}}
                             </span>
                             <span class="items dot">·</span>
-                            <span class="items date" title="${$value.date_last_updated}"> 
-                            </span>
+                            <span class="items date" title="${$value.time_ago}"></span>
                         </td>
                     </tr>
                 </table>
@@ -73,6 +72,7 @@
             <div class="logo"> 
             </div>            
             <div class='relative'>
+                <img src="images/loading.gif" alt="" class="loader" />
                 <div class='error'></div>
                 <form class="signin" autocomplete="off">
                     <h3>Sign In</h3>
@@ -148,8 +148,10 @@
             </div>
             <div id="footer">
                 <a href="http://minus.com" target="_blank"><img src="images/bottom_logo.png" width="60px"/></a>
-                <a href="#" id="user" target="_blank">profile</a>
-                <a href="http://min.us/pages/galleries" target="_blank" id="galleries_header" class="minus_link"></a>
+                <a href="#" id="signout" title="Sign out"><img src="images/logout.png" width="13px" /></a>
+                <a href="#" id="user" target="_blank">                    
+                    <span>profile</span>                                          
+                </a>                            
             </div>    
         </div>
 
