--- a/background.html
+++ b/background.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body class="background">
         <img id="img" src="images/logo_anim_sprite.png" height="19" />
         <canvas id="canvas" width="19" height="19"></canvas>
 
