--- a/data/edit_image.html
+++ b/data/edit_image.html
@@ -410,10 +410,8 @@
                 if (msg.method == "uploadComplete") {
                     window.close();
                 } else if (msg.method == "uploadProgress") {
-                    if (browser.isFirefox)
-                        $('#upload').html("Uploading...");
-                    else
-                        $('#upload').html(parseInt(msg.progress)+"% uploaded");
+                    console.log(msg);
+                    $('#upload').html(parseInt(msg.progress)+"% uploaded");
                 }
             });
         </script>
