Added popup reloading
Also changed events listener

--- a/data/options.html
+++ b/data/options.html
@@ -76,7 +76,7 @@
             function initOptions(storage) {
                 $('#visible_hotkey').val(storage.shortcuts.visible.key);
                 $('#entire_hotkey').val(storage.shortcuts.entire.key);
-                $('#area_hotkey').val(storage.shortcuts.region.key);
+//                $('#area_hotkey').val(storage.shortcuts.region.key);
 
                 $('.options').css({ 'visibility': 'visible' });
 
