--- a/data/edit_image.html
+++ b/data/edit_image.html
@@ -190,6 +190,10 @@
             #upload:hover {
                 box-shadow: 0 0 4px 1px rgba(150,150,150, 0.5);
             }
+
+            .avpw_scrolling_region_panel {
+                float: left !important;
+            }
         </style>
     </head>
     <body style="overflow-x: hidden; text-align: center;">
