Fixed UI for firefox
As firefox did't support upload progress, display different message while
uploading

--- a/data/edit_image.html
+++ b/data/edit_image.html
@@ -273,8 +273,11 @@
             $('#upload').bind('click', function(){
                 if ($(this).hasClass('loading'))
                     return false;
-
-                $(this).html('0% uploaded');
+                
+                if (browser.isFirefox)
+                    $(this).html('Uploading...');
+                else
+                    $(this).html('0% uploaded');
                 
                 var title = capture_data.tabtitle;
 
